# counsel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
counsel/: __init__.py  __main__.py  cli.py  counsel.py  policy.py
counsel/assets/templates/: slack.md.j2
counsel/models/: counsel.py  syft.py
