[tool.poetry]
name = "counsel"
version = "0.1.0a0"
description = "A tool for monitoring the vulnerabilities of docker containers."
authors = ["Grégoire Burel <evhart@users.noreply.github.com>"]
homepage = "https://github.com/evhart/counsel/"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities",
  "Topic :: Communications",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
]
include = [
  { path ="README.md", format = "sdist" },
  { path ="pyproject.toml", format = "sdist" },
  { path ="LICENSE", format = "sdist" },
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evhart/counsel/"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.0.1"
apprise = "^1.3.0"
jinja2 = "^3.1.2"
typer = {extras = ["all"], version = "^0.7.0"}
shellingham = "^1.5.0.post1"
croniter = "^1.3.8"
cachetools = "^5.3.0"
pydantic = "^1.10.6"
types-cachetools = "^5.3.0.4"
types-croniter = "^1.3.2.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pydocstyle = "^6.3.0"
pre-commit = "^3.1.1"

[tool.poetry.scripts]
counsel = "counsel.cli:app"

[tool.isort]
profile = "black"
py_version = 311
multi_line_output = 3

[tool.black]
include = '\.pyi?$'
line-length = 88
target_version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
